book ratio on diff screen size

--- a/index.html
+++ b/index.html
@@ -89,6 +89,29 @@ button:hover {
   <script>
     $(".flipbook").turn();
   </script>
+  <script>
+  function resizeFlipbook() {
+    const flipbook = document.querySelector('.flipbook');
+    const screenWidth = window.innerWidth;
+
+    if (screenWidth <= 480) {
+      flipbook.style.width = '95vw';
+      flipbook.style.height = '60vh';
+    } else if (screenWidth <= 768) {
+      flipbook.style.width = '90vw';
+      flipbook.style.height = '50vh';
+    } else if (screenWidth <= 1024) {
+      flipbook.style.width = '80vw';
+      flipbook.style.height = '50vh';
+    } else {
+      flipbook.style.width = '1024px';
+      flipbook.style.height = '650px';
+    }
+  }
+
+  window.addEventListener('load', resizeFlipbook);
+  window.addEventListener('resize', resizeFlipbook);
+</script>
 </body>
 
 </html>
