--- a/index.html
+++ b/index.html
@@ -50,8 +50,28 @@
 
 <body>
   <div class="flipbook">
-    <div class="hard">LINKON HUNTERS 2025 <small>~ UNICORNS</small></div>
-    <div class="hard"></div>
+<div class="hard">
+ <picture>
+  <source srcset="images/cover-small.png" media="(max-width: 480px)">
+  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <img 
+    src="images/cover-large.png" 
+    alt="Book Cover" 
+    style="width: 100%; height: auto; object-fit: cover;">
+</picture>
+
+</div>
+<div class="hard">
+ <picture>
+  <source srcset="images/innercover-small.png" media="(max-width: 480px)">
+  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <img 
+    src="images/innercover.png" 
+    alt="Book Cover" 
+    style="width: 100%; height: auto; object-fit: cover;">
+</picture>
+</div>
+
     <div>
       <small>Just me collecting pretty girls ❤️</small>
       <small>Gotta Catch 'Em All</small>
@@ -92,8 +112,24 @@
      <div>
       <img src="images/12.png" alt="" />
     </div>
-    <div class="hard"></div>
-    <div class="hard">Thank You <small>Yearbook by mephistomum</small></div>
+    <div class="hard">
+      <picture>
+  <source srcset="images/innercover-small.png" media="(max-width: 480px)">
+  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <img 
+    src="images/innercover.png" 
+    alt="Book Cover" 
+    style="width: 100%; height: auto; object-fit: cover;">
+</picture>
+    </div>
+    <div class="hard"> <picture>
+  <source srcset="images/innercover-small.png" media="(max-width: 480px)">
+  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <img 
+    src="images/innercover.png" 
+    alt="Book Cover" 
+    style="width: 100%; height: auto; object-fit: cover;">
+</picture></div>
 
   </div>
 <!-- Return to Gallery Button (Placed Below the Book) -->
