--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="hard">
  <picture>
   <source srcset="images/cover-small.png" media="(max-width: 480px)">
-  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <source srcset="images/cover-large.png" media="(max-width: 768px)">
   <img 
     src="images/cover-large.png" 
     alt="Book Cover" 
@@ -64,7 +64,7 @@
 <div class="hard">
  <picture>
   <source srcset="images/innercover-small.png" media="(max-width: 480px)">
-  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <source srcset="images/innercover.png" media="(max-width: 768px)">
   <img 
     src="images/innercover.png" 
     alt="Book Cover" 
@@ -115,7 +115,7 @@
     <div class="hard">
       <picture>
   <source srcset="images/innercover-small.png" media="(max-width: 480px)">
-  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <source srcset="images/innercover.png" media="(max-width: 768px)">
   <img 
     src="images/innercover.png" 
     alt="Book Cover" 
@@ -124,7 +124,7 @@
     </div>
     <div class="hard"> <picture>
   <source srcset="images/innercover-small.png" media="(max-width: 480px)">
-  <source srcset="images/cover-medium.png" media="(max-width: 768px)">
+  <source srcset="images/innercover.png" media="(max-width: 768px)">
   <img 
     src="images/innercover.png" 
     alt="Book Cover" 
