--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       flipbook.style.height = '50vh';
       
     } else {
-      flipbook.style.width = '1024px';
-      flipbook.style.height = '650px';
+       flipbook.style.width = '95vw';
+      flipbook.style.height = '40vh';
     }
   }
 
