--- a/index.html
+++ b/index.html
@@ -112,6 +112,18 @@
      <div>
       <img src="images/12.png" alt="" />
     </div>
+      <div>
+      <img src="images/13.png" alt="" />
+    </div>
+    <div>
+      <img src="images/14.png" alt="" />
+    </div>
+    <div>
+      <img src="images/15.png" alt="" />
+    </div>
+     <div>
+      <img src="images/16.png" alt="" />
+    </div>
     <div class="hard">
       <picture>
   <source srcset="images/innercover-small.png" media="(max-width: 480px)">
