--- a/index.html
+++ b/index.html
@@ -124,6 +124,18 @@
      <div>
       <img src="images/16.png" alt="" />
     </div>
+          <div>
+      <img src="images/17.png" alt="" />
+    </div>
+    <div>
+      <img src="images/18.png" alt="" />
+    </div>
+    <div>
+      <img src="images/19.png" alt="" />
+    </div>
+     <div>
+      <img src="images/20.png" alt="" />
+    </div>
     <div class="hard">
       <picture>
   <source srcset="images/innercover-small.png" media="(max-width: 480px)">
